Đang hoàn thiện Backend phần thanh toán. Giao tiếp qua kafka cho nghiệp vụ multi-service(thanh toán onl)